# swagger.json
@@ -808,13 +808,6 @@
                   },
                   "address": {
                     "type": "string"
-                  },
-                  "role": {
-                    "type": "string",
-                    "enum": [
-                      "user",
-                      "admin"
-                    ]
                   }
                 }
               }
